--- a/creator.css
+++ b/creator.css
@@ -9,25 +9,46 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+body:hover {
+ background: linear-gradient(#57aeff, #ffffff);   color: rgb(140, 61, 61);
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
 
 /* Header Section */
 .header {
   text-align: center;
+  background-color: #110054;
+  min-width: 100vw;
   padding: 40px 20px 20px;
    background: #110054;
   color: #ffffff;
-  box-shadow: 10px 10px 8px 20px rgb(255, 255, 255);
-}
+box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);}
 
 .header h1 {
   font-size: 3rem;
   margin-bottom: 10px;
   color: #ffffff;
 }
+h1:hover {
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
 
 .header p {
   font-size: 1.2rem;
   color: #dcdcdc;
+}
+p:hover {
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 /* Creators Container */
@@ -37,6 +58,7 @@ body {
   justify-content: center;
   gap: 30px;
   padding: 40px 20px;
+  
 }
 
 /* Individual Card */
@@ -63,11 +85,25 @@ body {
   border-radius: 12px;
   margin-bottom: 15px;
 }
+img:hover {
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
 
 .card h2 {
   font-size: 1.5rem;
   margin: 10px 0;
   color: #2a5298;
+}
+h2:hover {
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 .card p {
@@ -89,5 +125,9 @@ button {
 }
 
 button:hover {
-  background-color: #1e3c72;
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
