--- a/home.css
+++ b/home.css
@@ -4,6 +4,11 @@
 body{
     background-color: rgb(255, 255, 255);
 }
+body:hover {
+ background: linear-gradient(#57aeff, #ffffff);   color: whitesmoke;
+  
+
+}
 header {
   background: #110054;
   color: #ffffff;
@@ -19,14 +24,19 @@ header {
   box-shadow: 1px 1px 2px 2px rgb(255, 255, 255);
   
 }
-.header:hover {
-  background: linear-gradient(#63b1f5, #000000);
+header:hover {
+  background: linear-gradient(#000000, #000000);
   color: whitesmoke;
   box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 header h1{
     text-shadow: 9px 9px 6px rgba(0,0,0,0.9);
+}
+h1:hover {
+background: linear-gradient(#004e96, #000000);   color: whitesmoke;  
+  transform: translateY(-18px );
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 header button {
     background: linear-gradient(135deg, #ffffff, #ffffff);
@@ -36,12 +46,18 @@ header button {
 
   font-weight: 700;
   padding: 10px 22px;
+  margin: 5px;
   border-radius: 8px;
   cursor: pointer;
   font-size: 1rem;
   transition: background-color 3s ease-in;
  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+ 
 }
+header:second-child{
+  padding: 400px;
+}
+
 header button:hover {
   
   background: linear-gradient( #63b1f5, #000000);
@@ -54,7 +70,7 @@ header button:hover {
 /* Banner with background image & overlay */
 .banner {
   position: relative;
-   background-color: #041c87;
+   background-color: #000000;
   height: 300px;
   max-width: 900px;
   margin: 40px auto;
@@ -71,14 +87,7 @@ header button:hover {
 }
 
 /* Dark overlay to improve text visibility */
-.banner::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgb(0, 0, 0);
-  z-index: 1;
-  border-radius: 15px;
-}
+
 
 /* Banner text container */
 .banner-text {
@@ -86,6 +95,7 @@ header button:hover {
   z-index: 2;
   max-width: 80%;
 }
+
 .banner-text h2 {
   font-size: 3rem;
   font-weight: 900;
@@ -93,11 +103,23 @@ header button:hover {
   margin-bottom: 12px;
   text-shadow: 4px 4px 6px rgba(0,0,0,0.9);
 }
+h2:hover {
+ background: linear-gradient(#004e96, #000000);   color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
 .banner-text p {
   font-size: 1.4rem;
   font-weight: 600;
   letter-spacing: 1px;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
+}
+p:hover {
+ background: linear-gradient(#004e96, #000000);   color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 .banner:hover {
   background: linear-gradient(135deg, #2f5c9c, #64b5f6);
