--- a/quiz-html.css
+++ b/quiz-html.css
@@ -3,9 +3,15 @@ body {
   margin: 0;
   padding: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(to right, #1e3c72, #2a5298);
-  color: #fff;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   min-height: 100vh;
+}
+body:hover {
+ background: linear-gradient( #1e3c72, #2a5298);  color: rgb(255, 255, 255);
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 /* Heading */
@@ -13,6 +19,12 @@ h1 {
   text-align: center;
   font-size: 2.8rem;
   margin-bottom: 30px;
+}
+h1:hover {
+ background: linear-gradient(#004e96, #000000);   color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 /* Question Container */
@@ -25,11 +37,25 @@ h1 {
   max-width: 600px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
+.question:hover {
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
 
 .question strong {
   display: block;
   margin-bottom: 15px;
   font-size: 1.2rem;
+}
+strong:hover {
+background: linear-gradient(#004e96, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 /* Options Styling */
@@ -42,21 +68,27 @@ h1 {
   border-radius: 10px;
   font-size: 1rem;
   cursor: pointer;
-  background-color: #e0e0e0;
+  background-color: #d3d8e0;
   transition: background-color 0.3s ease;
 }
 
+
 .options button:hover:not(:disabled) {
-  background-color: #d0d0d0;
+
+  background: linear-gradient(#004e96, #000000);  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+
 }
 
 .options button.correct {
-  background-color: #4caf50;
-  color: white;
+  background-color: #008e058b;
+  color: rgb(255, 255, 255);
 }
 
 .options button.wrong {
-  background-color: #f44336;
+  background-color: #c40d00;
   color: white;
 }
 
@@ -66,7 +98,7 @@ h1 {
   margin: 40px auto;
   padding: 12px 30px;
   font-size: 1rem;
-  background-color: #2a5298;
+  background-color: #2e85cb;
   border: none;
   border-radius: 25px;
   color: white;
@@ -74,8 +106,12 @@ h1 {
   transition: background-color 0.3s ease;
 }
 
+
 .score-btn:hover {
-  background-color: #1e3c72;
+  background: linear-gradient(#004e96, #000000);  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 /* Back to Home Button */
@@ -94,5 +130,8 @@ h1 {
 }
 
 .back-btn:hover {
-  background-color: #dfe6f3;
+  background: linear-gradient(#004e96, #000000);  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
