--- a/quiz-python.css
+++ b/quiz-python.css
@@ -2,9 +2,15 @@ body {
   margin: 0;
   padding: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(to right, #2c3e50, #3498db);
-  color: #fff;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   min-height: 100vh;
+}
+body:hover {
+ background: linear-gradient( #1e3c72, #2a5298);  color: rgb(255, 255, 255);
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 h1 {
@@ -12,6 +18,13 @@ h1 {
   font-size: 2.8rem;
   margin-bottom: 30px;
 }
+h1:hover {
+ background: linear-gradient(#004e96, #000000);   color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
+
 
 .question {
   background-color: #ffffff;
@@ -22,11 +35,24 @@ h1 {
   max-width: 600px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
-
+.question:hover {
+  background: linear-gradient(#63b1f5, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+}
 .question strong {
   display: block;
   margin-bottom: 15px;
   font-size: 1.2rem;
+}
+strong:hover {
+background: linear-gradient(#004e96, #000000);
+  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
 .options button {
@@ -43,7 +69,12 @@ h1 {
 }
 
 .options button:hover:not(:disabled) {
-  background-color: #d0d0d0;
+
+  background: linear-gradient(#004e96, #000000);  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
+
 }
 
 .options button.correct {
@@ -61,7 +92,7 @@ h1 {
   margin: 40px auto;
   padding: 12px 30px;
   font-size: 1rem;
-  background-color: #3498db;
+ background-color: #2e85cb;
   border: none;
   border-radius: 25px;
   color: white;
@@ -70,8 +101,12 @@ h1 {
 }
 
 .score-btn:hover {
-  background-color: #2c3e50;
+  background: linear-gradient(#004e96, #000000);  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
+
 
 .back-btn {
   display: block;
@@ -88,5 +123,8 @@ h1 {
 }
 
 .back-btn:hover {
-  background-color: #dfe6f3;
+  background: linear-gradient(#004e96, #000000);  color: whitesmoke;
+  
+  transform: translateY(-8px);
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
