--- a/home.css
+++ b/home.css
@@ -25,8 +25,12 @@ header {
   
 }
 header:hover {
+  /*
   background: linear-gradient(#000000, #000000);
   color: whitesmoke;
+  box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);*/
+    background: linear-gradient(135deg, #2f5c9c, #64b5f6);
+  transform: translateY(30px);
   box-shadow: 0 14px 30px rgba(13, 71, 161, 0.8);
 }
 
